# PointCloudVisualizer

./: .gitignore  LICENSE.txt  README.md  build_all.bat  build_all.sh
AzureKinect/: build_all.bat
AzureKinect/CPU-based/: build.bat
AzureKinect/CPU-based/code/: k4a.c  main.c
AzureKinect/CPU-plus-OpenGL/: build.bat
AzureKinect/CPU-plus-OpenGL/code/: k4a.c  main.c  opengl_renderer.c  write_to_ply.c
AzureKinect/OpenCL/: build.bat  build.sh
AzureKinect/OpenCL/code/: k4a.c  main.c  opencl.c  opencl_opengl.c  opengl.c
AzureKinect/OpenCL/lib/: OpenCLExt.lib
AzureKinect/OpenGL/: build.bat  build.sh
AzureKinect/OpenGL/code/: k4a.c  main.c  opengl_renderer.c
AzureKinect/PCL/: CMakeLists.txt  build.bat
AzureKinect/PCL/build_linux/: CMakeCache.txt  Makefile  cmake_install.cmake  pcl_version
AzureKinect/PCL/code/: k4a.c  main.cpp
CPU-based/code/: k4a.c
CPU-plus-OpenGL/: build.bat
OpenCL/code/: k4a.c  opencl.c  types.h
OpenGL/code/: main.c
epc660/: build_all.bat  build_all.sh
epc660/CPU-based/: build.bat
epc660/CPU-based/code/: input.c  main.c  network.c
epc660/CPU-plus-OpenGL/: build.bat  build.sh
epc660/CPU-plus-OpenGL/code/: main.c  network.c  opengl_renderer.c  opengl_renderer.h
epc660/OpenCL/: build.bat  build.sh
epc660/OpenCL/code/: linalg.h  main.c  network.c  opencl.c
epc660/OpenCL/lib/: OpenCL.lib  OpenCLUtils.lib
epc660/OpenGL/: build.bat  build.sh
epc660/PCL/: CMakeLists.txt  build.bat  build.sh
epc660/PCL/build_linux/: CMakeCache.txt  Makefile  cmake_install.cmake  pcl_version
epc660/PCL/code/: main.cpp  network.c
(+5 files in other folders)
