cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(PCL)
find_package(PCL 1.4 REQUIRED)
if(WIN32)
include_directories(${PCL_INCLUDE_DIRS} ${CMAKE_SOURCE_DIR}/include)
link_directories(${PCL_LIBRARY_DIRS} ${CMAKE_SOURCE_DIR}/lib)
elseif(UNIX)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
endif()
add_definitions(${PCL_DEFINITIONS})
add_executable(pcl_version code/main.cpp)
if(WIN32)
target_link_libraries(pcl_version ${PCL_LIBRARIES} k4a.lib)
target_link_libraries(pcl_version ${PCL_LIBRARIES} MinHook.x64.lib)
elseif(UNIX)
target_link_libraries(pcl_version ${PCL_LIBRARIES} k4a)
endif()
