cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(PCL)
find_package(PCL 1.4 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(pcl_version code/main.cpp)
target_link_libraries(pcl_version ${PCL_LIBRARIES})